[tool.poetry]
name = "pymessagebus"
version = "1.2.3"
description = "A simple implementation of the MessageBus / CommandBus pattern"
authors = ["Olivier Philippon <olivier@rougemine.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pylint = "^2.7.2"
mypy = "^0.812"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
